# clean-air-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
.github/: README.md
clean_air_pipeline.egg-info/: PKG-INFO  SOURCES.txt
dags/: daily_openaq_dag.py  weekly_openaq_dag.py
sql/: schema.sql
src/: extract_openaq.py  extract_openaq_locations.py  extract_openaq_measurements.py  extract_openaq_meausurements.py  extract_openaq_parameters.py  extract_openaq_sensors.py  load_dim_location.py  load_dim_parameter.py  load_dim_sensor.py  load_fact_measurements.py  pipeline_runner.py  requirements.txt  test_run.py  transform_dim_location.py  transform_dim_parameter.py  transform_dim_sensor.py  transform_dim_sensors.py  transform_fact_measurements.py  transform_locations.py  transform_openaq_measurements.py
src/utils/: extract_openaq_utils.py  snowflake_connector.py  transform_utils.py
tests/: 20250716174257.parquet  locations_dump_20250713_182021.json  test_call.py  test_timezones.py  test_util.py
utils/: transform_utils.py
