[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-air-pipeline"
version = "0.1.0"
description = "A pipeline to process air quality data from OpenAQ."
dependencies = [
    "boto3",
    "botocore",
    "pandas",
    "python-dotenv",
    "Requests"
]

[tool.setuptools.packages.find]
where = ["src"]