[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-air-pipeline"
version = "0.3.0"
description = "A pipeline to process air quality data from OpenAQ."
readme = "README.md" 
authors = [
    { name = "Leo Grund, email = "leogrund10#@gmail.com" } # Hinzugefügt
]
license = { text = "MIT" } 
python_requires = ">=3.9" 

dependencies = [
    "boto3",
    "pandas",
    "python-dotenv",
    "requests"
]

[project.urls]
Homepage = "https://github.com/LeoGr777/clean-air-pipeline" 
Repository = "https://github.com/LeoGr777/clean-air-pipeline" 

[tool.setuptools.packages.find]
where = ["src"]